Fix Card Alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -141,6 +141,8 @@
   top: 0;
   transition: top 0.3s ease;
   margin: 0 1.1em;
+  display: flex;
+  flex-direction: column;
 }
 
 .card > a:hover {
@@ -182,7 +184,10 @@
     }
   }
 }
-
+.card-content-wrapper {
+  height: 200px;
+  
+}
 .card-content {
   position: relative;
   top: 0;
